--- a/muk_web_client/i18n/es.po
+++ b/muk_web_client/i18n/es.po
@@ -4,10 +4,10 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Odoo Server 12.0-20190522\n"
+"Project-Id-Version: Odoo Server 12.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-06-25 13:39+0000\n"
-"PO-Revision-Date: 2019-06-25 13:39+0000\n"
+"POT-Creation-Date: 2020-04-11 04:40+0000\n"
+"PO-Revision-Date: 2020-04-11 04:40+0000\n"
 "Last-Translator: <>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -23,7 +23,7 @@ msgstr "Guarde esa página y regrese aquí para configurar la función."
 #. module: muk_web_client
 #: model_terms:ir.ui.view,arch_db:muk_web_client.res_config_settings_view_form
 msgid "Automated Refresh"
-msgstr ""
+msgstr "Actualización automatizada"
 
 #. module: muk_web_client
 #: model:ir.model,name:muk_web_client.model_res_config_settings
@@ -33,40 +33,40 @@ msgstr "Opciones de Configuración"
 #. module: muk_web_client
 #: model_terms:ir.ui.view,arch_db:muk_web_client.res_config_settings_view_form
 msgid "Define action rules to automatically refresh views"
-msgstr ""
+msgstr "Definir reglas de acción para actualizar vistas automáticamente"
 
 #. module: muk_web_client
 #: model:ir.model.fields,help:muk_web_client.field_res_config_settings__module_muk_web_client_refresh
 msgid "Define action rules to automatically refresh views."
-msgstr ""
+msgstr "Defina reglas de acción para actualizar automáticamente las vistas."
 
 #. module: muk_web_client
 #: model_terms:ir.ui.view,arch_db:muk_web_client.res_config_settings_view_form
 msgid "Notifications"
-msgstr ""
+msgstr "Notificaciones"
 
 #. module: muk_web_client
 #: model_terms:ir.ui.view,arch_db:muk_web_client.res_config_settings_view_form
 msgid "Send instant messages to users in real time"
-msgstr ""
+msgstr "Enviar mensajes instantáneos a los usuarios en tiempo real"
 
 #. module: muk_web_client
 #: model:ir.model.fields,help:muk_web_client.field_res_config_settings__module_muk_web_client_notification
 msgid "Send instant messages to users in real time."
-msgstr ""
+msgstr "Enviar mensajes instantáneos a los usuarios en tiempo real"
 
 #. module: muk_web_client
 #: model_terms:ir.ui.view,arch_db:muk_web_client.res_config_settings_view_form
 msgid "Web Client"
-msgstr ""
+msgstr "Cliente Web"
 
 #. module: muk_web_client
 #: model:ir.model.fields,field_description:muk_web_client.field_res_config_settings__module_muk_web_client_notification
 msgid "Web Notification"
-msgstr ""
+msgstr "Notificaciones Web"
 
 #. module: muk_web_client
 #: model:ir.model.fields,field_description:muk_web_client.field_res_config_settings__module_muk_web_client_refresh
 msgid "Web Refresh"
-msgstr ""
+msgstr "Actualización web"
 
