--- a/muk_web_preview/i18n/es.po
+++ b/muk_web_preview/i18n/es.po
@@ -4,10 +4,10 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Odoo Server 12.0-20190128\n"
+"Project-Id-Version: Odoo Server 12.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-03-04 13:26+0000\n"
-"PO-Revision-Date: 2019-03-04 13:26+0000\n"
+"POT-Creation-Date: 2020-04-11 04:43+0000\n"
+"PO-Revision-Date: 2020-04-11 04:43+0000\n"
 "Last-Translator: <>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -17,17 +17,17 @@ msgstr ""
 
 #. module: muk_web_preview
 #. openerp-web
-#: code:addons/muk_web_preview/static/src/xml/fields.xml:28
+#: code:addons/muk_web_preview/static/src/xml/fields.xml:34
 #, python-format
 msgid "Clear"
-msgstr ""
+msgstr "Limpiar"
 
 #. module: muk_web_preview
 #. openerp-web
-#: code:addons/muk_web_preview/static/src/xml/dialog.xml:30
+#: code:addons/muk_web_preview/static/src/xml/dialog.xml:36
 #, python-format
 msgid "Close"
-msgstr ""
+msgstr "Cerrar"
 
 #. module: muk_web_preview
 #: model:ir.model,name:muk_web_preview.model_res_config_settings
@@ -36,308 +36,285 @@ msgstr "Opciones de Configuración"
 
 #. module: muk_web_preview
 #. openerp-web
-#: code:addons/muk_web_preview/static/src/js/widgets/manager.js:180
-#: code:addons/muk_web_preview/static/src/xml/content.xml:53
+#: code:addons/muk_web_preview/static/src/xml/fields.xml:30
+#, python-format
+msgid "Controls"
+msgstr "Controles"
+
+#. module: muk_web_preview
+#. openerp-web
+#: code:addons/muk_web_preview/static/src/js/widgets/manager.js:183
+#: code:addons/muk_web_preview/static/src/xml/content.xml:59
 #, python-format
 msgid "Download"
-msgstr ""
-
-#. module: muk_web_preview
-#: model_terms:ir.ui.view,arch_db:muk_web_preview.res_config_settings_view_form
-msgid "Extendes the Preview Dialog to support RTF files"
-msgstr ""
-
-#. module: muk_web_preview
-#: model:ir.model.fields,help:muk_web_preview.field_res_config_settings__module_muk_web_preview_rtf
-msgid "Extendes the Preview Dialog to support RTF files."
-msgstr ""
+msgstr "Descargar"
 
 #. module: muk_web_preview
 #: model_terms:ir.ui.view,arch_db:muk_web_preview.res_config_settings_view_form
 msgid "Extendes the Preview Dialog to support audio"
-msgstr ""
+msgstr "Extiende la Vista previa para admitir archivos de audio"
 
 #. module: muk_web_preview
 #: model:ir.model.fields,help:muk_web_preview.field_res_config_settings__module_muk_web_preview_audio
 msgid "Extendes the Preview Dialog to support audio."
-msgstr ""
+msgstr "Extiende la Vista previa para admitir archivos de audio."
 
 #. module: muk_web_preview
 #: model_terms:ir.ui.view,arch_db:muk_web_preview.res_config_settings_view_form
 msgid "Extendes the Preview Dialog to support csv files"
-msgstr ""
+msgstr "Extiende la Vista previa para admitir archivos CSV"
 
 #. module: muk_web_preview
 #: model:ir.model.fields,help:muk_web_preview.field_res_config_settings__module_muk_web_preview_csv
 msgid "Extendes the Preview Dialog to support csv files."
-msgstr ""
+msgstr "Extiende la Vista previa para admitir archivos CSV."
 
 #. module: muk_web_preview
 #: model_terms:ir.ui.view,arch_db:muk_web_preview.res_config_settings_view_form
 msgid "Extendes the Preview Dialog to support image files"
-msgstr ""
+msgstr "Extiende la Vista previa para admitir archivos de imagen"
 
 #. module: muk_web_preview
 #: model:ir.model.fields,help:muk_web_preview.field_res_config_settings__module_muk_web_preview_image
 msgid "Extendes the Preview Dialog to support image files."
-msgstr ""
+msgstr "Extiende la Vista previa para admitir archivos de imagen."
 
 #. module: muk_web_preview
 #: model_terms:ir.ui.view,arch_db:muk_web_preview.res_config_settings_view_form
 msgid "Extendes the Preview Dialog to support mails"
-msgstr ""
+msgstr "Extiende la Vista previa para admitir archivos de email"
 
 #. module: muk_web_preview
 #: model:ir.model.fields,help:muk_web_preview.field_res_config_settings__module_muk_web_preview_mail
 msgid "Extendes the Preview Dialog to support mails."
-msgstr ""
+msgstr "Extiende la Vista previa para admitir archivos de email."
 
 #. module: muk_web_preview
 #: model_terms:ir.ui.view,arch_db:muk_web_preview.res_config_settings_view_form
 msgid "Extendes the Preview Dialog to support markdown files"
-msgstr ""
+msgstr "Extiende la Vista previa para admitir archivos markdown"
 
 #. module: muk_web_preview
 #: model:ir.model.fields,help:muk_web_preview.field_res_config_settings__module_muk_web_preview_markdown
 msgid "Extendes the Preview Dialog to support markdown files."
-msgstr ""
+msgstr "Extiende la Vista previa para admitir archivos markdown."
 
 #. module: muk_web_preview
 #: model_terms:ir.ui.view,arch_db:muk_web_preview.res_config_settings_view_form
 msgid "Extendes the Preview Dialog to support office files"
-msgstr ""
+msgstr "Extiende la Vista previa para admitir archivos de office"
 
 #. module: muk_web_preview
 #: model:ir.model.fields,help:muk_web_preview.field_res_config_settings__module_muk_web_preview_msoffice
 msgid "Extendes the Preview Dialog to support office files."
-msgstr ""
+msgstr "Extiende la Vista previa para admitir archivos de office."
 
 #. module: muk_web_preview
 #: model_terms:ir.ui.view,arch_db:muk_web_preview.res_config_settings_view_form
 msgid "Extendes the Preview Dialog to support open document files"
-msgstr ""
+msgstr "Extiende la Vista previa para admitir archivos de open document"
 
 #. module: muk_web_preview
 #: model:ir.model.fields,help:muk_web_preview.field_res_config_settings__module_muk_web_preview_opendocument
 msgid "Extendes the Preview Dialog to support open document files."
-msgstr ""
+msgstr "Extiende la Vista previa para admitir archivos de open document."
 
 #. module: muk_web_preview
 #: model_terms:ir.ui.view,arch_db:muk_web_preview.res_config_settings_view_form
 msgid "Extendes the Preview Dialog to support reStructuredText"
-msgstr ""
+msgstr "Extiende la Vista previa para admitir archivos de reStructuredText"
 
 #. module: muk_web_preview
 #: model:ir.model.fields,help:muk_web_preview.field_res_config_settings__module_muk_web_preview_rst
 msgid "Extendes the Preview Dialog to support reStructuredText."
-msgstr ""
+msgstr "Extiende la Vista previa para admitir archivos de reStructuredText."
 
 #. module: muk_web_preview
 #: model_terms:ir.ui.view,arch_db:muk_web_preview.res_config_settings_view_form
 msgid "Extendes the Preview Dialog to support text files"
-msgstr ""
+msgstr "Extiende la Vista previa para admitir archivos de texto"
 
 #. module: muk_web_preview
 #: model:ir.model.fields,help:muk_web_preview.field_res_config_settings__module_muk_web_preview_text
 msgid "Extendes the Preview Dialog to support text files."
-msgstr ""
-
-#. module: muk_web_preview
-#: model_terms:ir.ui.view,arch_db:muk_web_preview.res_config_settings_view_form
-msgid "Extendes the Preview Dialog to support vector files"
-msgstr ""
-
-#. module: muk_web_preview
-#: model:ir.model.fields,help:muk_web_preview.field_res_config_settings__module_muk_web_preview_vector
-msgid "Extendes the Preview Dialog to support vector files."
-msgstr ""
+msgstr "Extiende la Vista previa para admitir archivos de texto."
 
 #. module: muk_web_preview
 #: model_terms:ir.ui.view,arch_db:muk_web_preview.res_config_settings_view_form
 msgid "Extendes the Preview Dialog to support video files"
-msgstr ""
+msgstr "Extiende la Vista previa para admitir archivos de video"
 
 #. module: muk_web_preview
 #: model:ir.model.fields,help:muk_web_preview.field_res_config_settings__module_muk_web_preview_video
 msgid "Extendes the Preview Dialog to support video files."
-msgstr ""
+msgstr "Extiende la Vista previa para admitir archivos de video."
 
 #. module: muk_web_preview
 #. openerp-web
-#: code:addons/muk_web_preview/static/src/xml/content.xml:43
+#: code:addons/muk_web_preview/static/src/xml/content.xml:49
 #, python-format
 msgid "Filename:"
-msgstr ""
+msgstr "Nombre del archivo:"
 
 #. module: muk_web_preview
 #. openerp-web
-#: code:addons/muk_web_preview/static/src/js/widgets/manager.js:82
+#: code:addons/muk_web_preview/static/src/js/widgets/manager.js:85
 #, python-format
 msgid "Loading"
-msgstr ""
+msgstr "Cargando"
 
 #. module: muk_web_preview
 #. openerp-web
-#: code:addons/muk_web_preview/static/src/js/widgets/manager.js:83
+#: code:addons/muk_web_preview/static/src/js/widgets/manager.js:86
 #, python-format
 msgid "Loading ."
-msgstr ""
+msgstr "Cargando ."
+
+#. module: muk_web_preview
+#. openerp-web
+#: code:addons/muk_web_preview/static/src/js/widgets/manager.js:87
+#, python-format
+msgid "Loading .."
+msgstr "Cargando .."
 
 #. module: muk_web_preview
 #. openerp-web
 #: code:addons/muk_web_preview/static/src/js/widgets/manager.js:84
-#, python-format
-msgid "Loading .."
-msgstr ""
-
-#. module: muk_web_preview
-#. openerp-web
-#: code:addons/muk_web_preview/static/src/js/widgets/manager.js:81
-#: code:addons/muk_web_preview/static/src/js/widgets/manager.js:85
+#: code:addons/muk_web_preview/static/src/js/widgets/manager.js:88
 #, python-format
 msgid "Loading ..."
-msgstr ""
+msgstr "Cargando ..."
 
 #. module: muk_web_preview
 #. openerp-web
-#: code:addons/muk_web_preview/static/src/xml/dialog.xml:33
+#: code:addons/muk_web_preview/static/src/xml/dialog.xml:39
 #, python-format
 msgid "Maximize"
-msgstr ""
+msgstr "Maximizar"
 
 #. module: muk_web_preview
 #. openerp-web
-#: code:addons/muk_web_preview/static/src/xml/content.xml:47
+#: code:addons/muk_web_preview/static/src/xml/content.xml:53
 #, python-format
 msgid "Mimetype:"
 msgstr ""
 
 #. module: muk_web_preview
 #. openerp-web
-#: code:addons/muk_web_preview/static/src/xml/dialog.xml:36
+#: code:addons/muk_web_preview/static/src/xml/dialog.xml:42
 #, python-format
 msgid "Minimize"
-msgstr ""
+msgstr "Minimizar"
 
 #. module: muk_web_preview
 #. openerp-web
-#: code:addons/muk_web_preview/static/src/js/widgets/manager.js:127
+#: code:addons/muk_web_preview/static/src/js/widgets/manager.js:130
 #, python-format
 msgid "Next"
-msgstr ""
+msgstr "Siguiente"
 
 #. module: muk_web_preview
 #. openerp-web
-#: code:addons/muk_web_preview/static/src/xml/dialog.xml:27
+#: code:addons/muk_web_preview/static/src/xml/dialog.xml:33
 #, python-format
 msgid "Preview"
-msgstr ""
+msgstr "Previo"
 
 #. module: muk_web_preview
 #: model:ir.model.fields,field_description:muk_web_preview.field_res_config_settings__module_muk_web_preview_audio
 msgid "Preview Audio"
-msgstr ""
+msgstr "Vista previa Audio"
 
 #. module: muk_web_preview
 #: model:ir.model.fields,field_description:muk_web_preview.field_res_config_settings__module_muk_web_preview_csv
 msgid "Preview CSV"
-msgstr ""
+msgstr "Vista previa CSV"
 
 #. module: muk_web_preview
 #: model:ir.model.fields,field_description:muk_web_preview.field_res_config_settings__module_muk_web_preview_image
 msgid "Preview Image"
-msgstr ""
+msgstr "Vista previa Imagen"
 
 #. module: muk_web_preview
 #: model:ir.model.fields,field_description:muk_web_preview.field_res_config_settings__module_muk_web_preview_msoffice
 msgid "Preview MS Office"
-msgstr ""
+msgstr "Vista previa MS Office"
 
 #. module: muk_web_preview
 #: model:ir.model.fields,field_description:muk_web_preview.field_res_config_settings__module_muk_web_preview_mail
 msgid "Preview Mail"
-msgstr ""
+msgstr "Vista previa Email"
 
 #. module: muk_web_preview
 #: model:ir.model.fields,field_description:muk_web_preview.field_res_config_settings__module_muk_web_preview_markdown
 msgid "Preview Markdown"
-msgstr ""
+msgstr "Vista previa Markdown"
 
 #. module: muk_web_preview
 #: model:ir.model.fields,field_description:muk_web_preview.field_res_config_settings__module_muk_web_preview_opendocument
 msgid "Preview Open Document"
-msgstr ""
-
-#. module: muk_web_preview
-#: model:ir.model.fields,field_description:muk_web_preview.field_res_config_settings__module_muk_web_preview_rtf
-msgid "Preview RTF"
-msgstr ""
+msgstr "Vista previa Open Document"
 
 #. module: muk_web_preview
 #: model:ir.model.fields,field_description:muk_web_preview.field_res_config_settings__module_muk_web_preview_rst
 msgid "Preview ReStructuredText"
-msgstr ""
+msgstr "Vista previa ReStructredText"
 
 #. module: muk_web_preview
 #: model:ir.model.fields,field_description:muk_web_preview.field_res_config_settings__module_muk_web_preview_text
 msgid "Preview Text"
-msgstr ""
-
-#. module: muk_web_preview
-#: model:ir.model.fields,field_description:muk_web_preview.field_res_config_settings__module_muk_web_preview_vector
-msgid "Preview Vector"
-msgstr ""
+msgstr "Vista previa Texto"
 
 #. module: muk_web_preview
 #: model:ir.model.fields,field_description:muk_web_preview.field_res_config_settings__module_muk_web_preview_video
 msgid "Preview Video"
-msgstr ""
+msgstr "Vista previa Video"
 
 #. module: muk_web_preview
 #. openerp-web
-#: code:addons/muk_web_preview/static/src/js/widgets/manager.js:119
+#: code:addons/muk_web_preview/static/src/js/widgets/manager.js:122
 #, python-format
 msgid "Previous"
-msgstr ""
+msgstr "Previo"
 
 #. module: muk_web_preview
 #. openerp-web
-#: code:addons/muk_web_preview/static/src/js/widgets/manager.js:188
+#: code:addons/muk_web_preview/static/src/js/widgets/manager.js:191
 #, python-format
 msgid "Print"
-msgstr ""
+msgstr "Impresión"
 
 #. module: muk_web_preview
 #. openerp-web
-#: code:addons/muk_web_preview/static/src/xml/fields.xml:26
-#: code:addons/muk_web_preview/static/src/xml/fields.xml:27
+#: code:addons/muk_web_preview/static/src/xml/fields.xml:32
+#: code:addons/muk_web_preview/static/src/xml/fields.xml:33
 #, python-format
 msgid "Select"
-msgstr ""
+msgstr "Seleccionar"
 
 #. module: muk_web_preview
 #. openerp-web
-#: code:addons/muk_web_preview/static/src/xml/content.xml:39
+#: code:addons/muk_web_preview/static/src/xml/content.xml:45
 #, python-format
 msgid "Unsupported File"
-msgstr ""
+msgstr "Archivo no soportado"
 
 #. module: muk_web_preview
 #. openerp-web
-#: code:addons/muk_web_preview/static/src/xml/fields.xml:26
+#: code:addons/muk_web_preview/static/src/xml/fields.xml:32
 #, python-format
 msgid "Upload your file"
-msgstr ""
+msgstr "Sube tu archivo"
 
 #. module: muk_web_preview
 #. openerp-web
-#: code:addons/muk_web_preview/static/src/xml/fields.xml:25
+#: code:addons/muk_web_preview/static/src/xml/fields.xml:31
 #, python-format
 msgid "Uploading..."
-msgstr ""
+msgstr "Subiendo ..."
 
 #. module: muk_web_preview
 #: model_terms:ir.ui.view,arch_db:muk_web_preview.res_config_settings_view_form
 msgid "Web Previews"
-msgstr ""
+msgstr "Vistas previas web"
 
